--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.13.0",
     "bootstrap": "^5.3.3",
     "next": "14.2.3",
+    "prisma": "^5.13.0",
     "react": "^18",
     "react-dom": "^18"
   },
